force-app/main/default/objects/ProjectTypeAttribute__c/ProjectTypeAttribute__c.object-meta.xml
<CustomObject>
    <description>Define a list of attributes that the project of different type captures</description>
    <label>Project Type attribute</label>
    <nameField>
        <displayFormat>PTA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Type attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>