force-app/main/default/objects/ProjectTypeAttribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Project Type attributes</relationshipLabel>
    <relationshipName>Project_Type_attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>