force-app/main/default/objects/ProjectTypeAttribute__c/fields/AttributeOrder__c.field-meta.xml
<CustomField>
    <fullName>AttributeOrder__c</fullName>
    <label>AttributeOrder</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>