force-app/main/default/objects/ProjectTypeAttribute__c/fields/AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>AttributeValue__c</fullName>
    <description>Default attribute value</description>
    <inlineHelpText>Default attribute value</inlineHelpText>
    <label>AttributeValue</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>