force-app/main/default/objects/ProjectTypeAttribute__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determine if this attribute is visible or not</description>
    <inlineHelpText>Determine if this attribute is visible or not</inlineHelpText>
    <label>IsVisible</label>
    <type>Checkbox</type>
</CustomField>