force-app/main/default/objects/ProjectTypeAttribute__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Type</label>
    <referenceTo>ProjectType__c</referenceTo>
    <relationshipLabel>Project Type attributes</relationshipLabel>
    <relationshipName>Project_Type_attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>